--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "google-map-react": "^1.0.5",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.0",
-    "react-router-dom": "^4.3.1"
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
