--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "google-map-react": "^1.0.5",
+    "openzeppelin-solidity": "^1.11.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "web3": "0.20.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
