--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,9 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.0"
+    "react-redux": "^5.0.7",
+    "react-router": "^3.0.0",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
