--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "redux": "^4.0.0"
   }
 }
