--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/vinsonly/Savour#readme",
   "dependencies": {
+    "app-root-path": "^2.1.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
-    "react-router": "^4.3.1",
-    "redux": "^4.0.0"
+    "validator": "^10.7.0"
   }
 }
