--- a/client/package.json
+++ b/client/package.json
@@ -50,14 +50,16 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
     "dotenv": "^2.0.0",
     "google-map-react": "^1.0.5",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "react-router": "^3.0.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
     "sweetalert2": "^7.26.12",
     "validator": "^10.7.0"
