--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
+    "nodemailer": "^4.6.8",
     "validator": "^10.7.0"
   }
 }
